# OMPEval

./: CMakeLists.txt  test.cpp
include/: HandEvaluator.h  HandEvaluator_c.h
omp/: EquityCalculator.h  HandEvaluator_c.cpp
